--- a/src/content/docs/fr/information-architecture.mdx
+++ b/src/content/docs/fr/information-architecture.mdx
@@ -6,7 +6,7 @@ weight: 6
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-<code> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+`Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)`
 
 <SrtPlayer
   client:only="react"
@@ -14,7 +14,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
   srtUrl="/podcasts/information-architecture.srt"
 />
 
-### 1. Définition
+## 1. Définition
 
 L’architecture de l’information consiste à structurer et organiser le contenu d’un produit numérique pour que l’utilisateur comprenne, navigue et accède facilement à ce qu’il cherche.
 
@@ -22,7 +22,7 @@ Elle est au cœur de la conception UX, entre le **contenu** et la **navigation**
 
 ---
 
-### 2. Pourquoi c’est important ?
+## 2. Pourquoi c’est important ?
 
 - Évite la surcharge cognitive
 - Favorise la clarté et la lisibilité
@@ -34,7 +34,7 @@ Elle est au cœur de la conception UX, entre le **contenu** et la **navigation**
 
 ---
 
-### 3. Méthode OOUX (Object-Oriented UX)
+## 3. Méthode OOUX (Object-Oriented UX)
 
 L’OOUX (UX orientée objet) est une méthode qui structure les interfaces autour des "objets" du système, avant de penser à la navigation ou au layout.
 
@@ -42,7 +42,7 @@ Inspirée de la pensée objet (comme en dev), cette méthode met l’accent sur 
 
 --
 
-##### Étape 1 – Identifier les objets
+### Étape 1 – Identifier les objets
 
 Qu’est-ce qu’un objet ?
 
@@ -57,7 +57,7 @@ Atelier :
 
 --
 
-##### Étape 2 – Caractéristiques & métadonnées
+### Étape 2 – Caractéristiques & métadonnées
 
 - **Caractéristiques** : infos qui définissent l’objet (titre, auteur, durée…)
 - **Métadonnées** : permettent de **filtrer/trier** les objets (catégorie, date, popularité…)
@@ -67,7 +67,7 @@ Atelier :
 
 --
 
-##### Étape 3 – Relations entre objets
+### Étape 3 – Relations entre objets
 
 - Quels objets sont **liés** à d’autres ?
 - Un objet peut en **encapsuler** un autre (ex : une “formation” contient des “cours”)
@@ -77,7 +77,7 @@ Atelier :
 
 --
 
-##### Étape 4 – Classer et hiérarchiser
+### Étape 4 – Classer et hiérarchiser
 
 Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
@@ -88,7 +88,7 @@ Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
 ---
 
-##### Étape 5 – Définir les interactions
+### Étape 5 – Définir les interactions
 
 - Quelles actions peut-on faire sur chaque objet ? (ex : “ajouter au panier”, “modifier”, “suivre ce cours”…)
 - C’est la **couche interactive** de l’architecture
@@ -97,7 +97,7 @@ Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
 ---
 
-### 4. Autres outils en architecture de l’info
+## 4. Autres outils en architecture de l’info
 
 | 🧰 Outil                          | 💡 Objectif principal                                       |
 | --------------------------------- | ----------------------------------------------------------- |
@@ -108,8 +108,12 @@ Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
 ---
 
-### Conclusion
+## Conclusion
 
 Une bonne architecture de l’information, c’est rendre l’invisible visible, en rendant le bon contenu accessible au bon moment.
 
 Elle se pense **en amont du design**, en **collaboration avec toutes les équipes** (UX, produit, dev, contenu…).
+
+```
+
+```
