--- a/src/content/docs/fr/ux-cognitive-psychology.mdx
+++ b/src/content/docs/fr/ux-cognitive-psychology.mdx
@@ -3,10 +3,10 @@ title: Psychologie cognitive
 description: "La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans la perception, la mémoire, l’attention, la prise de décision, etc."
 weight: 2
 ---
+
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-
-<code> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+`Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)`
 
 <SrtPlayer
   client:only="react"
@@ -20,7 +20,7 @@ La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans 
 
 ---
 
-### 2. Pourquoi c’est important en UX ?
+## 2. Pourquoi c’est important en UX ?
 
 - Nos utilisateurs **ne traitent pas l’information comme des machines**
 - Le cerveau est **limité** en mémoire, attention et raisonnement
@@ -28,22 +28,21 @@ La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans 
 
 ---
 
-### 3. Grands processus cognitifs utiles en UX
+## 3. Grands processus cognitifs utiles en UX
 
-| 🧠 Processus | 💡 Implication UX |
-| --- | --- |
-| **Perception** | Lois de Gestalt (groupement, contraste, complétion) |
-| **Attention** | Ressource limitée → ne pas surcharger visuellement une interface |
-| **Mémoire** | Loi de Miller : 7 ± 2 éléments à retenir max |
+| 🧠 Processus      | 💡 Implication UX                                                           |
+| ----------------- | --------------------------------------------------------------------------- |
+| **Perception**    | Lois de Gestalt (groupement, contraste, complétion)                         |
+| **Attention**     | Ressource limitée → ne pas surcharger visuellement une interface            |
+| **Mémoire**       | Loi de Miller : 7 ± 2 éléments à retenir max                                |
 | **Apprentissage** | Favoriser la répétition, la clarté, les feedbacks pour renforcer la mémoire |
-| **Décision** | Influencée par le nombre d’options, la présentation, le contexte émotionnel |
+| **Décision**      | Influencée par le nombre d’options, la présentation, le contexte émotionnel |
 
 ---
 
-### 4. Charge cognitive
+## 4. Charge cognitive
 
 > C’est l’effort mental que l’utilisateur doit fournir pour traiter l’information.
-> 
 
 **3 types à connaître :**
 
@@ -55,20 +54,20 @@ La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans 
 
 ---
 
-### 5. Biais & lois cognitives utiles en UX
+## 5. Biais & lois cognitives utiles en UX
 
-| 🧠 Biais / Loi UX | ✨ Application concrète |
-| --- | --- |
-| **Effet Von Restorff** | Un élément différent attire l’attention |
-| **Loi de Hick** | Trop de choix ralentit la prise de décision |
-| **Loi de Miller** | Limiter les infos visibles (7 ± 2 éléments) |
-| **Loi de Fitts** | Cibles grandes = plus faciles à cliquer |
-| **Effet Zeigarnik** | Les tâches incomplètes captent l’attention |
+| 🧠 Biais / Loi UX              | ✨ Application concrète                                 |
+| ------------------------------ | ------------------------------------------------------- |
+| **Effet Von Restorff**         | Un élément différent attire l’attention                 |
+| **Loi de Hick**                | Trop de choix ralentit la prise de décision             |
+| **Loi de Miller**              | Limiter les infos visibles (7 ± 2 éléments)             |
+| **Loi de Fitts**               | Cibles grandes = plus faciles à cliquer                 |
+| **Effet Zeigarnik**            | Les tâches incomplètes captent l’attention              |
 | **Principe de moindre effort** | L’utilisateur choisit toujours le chemin le plus simple |
 
 ---
 
-### 6. Intégration dans le design UX
+## 6. Intégration dans le design UX
 
 - **Interfaces simples, claires, lisibles**
 - **UX Writing** adapté pour guider sans effort
@@ -77,10 +76,14 @@ La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans 
 
 ---
 
-### Conclusion
+## Conclusion
 
 La psychologie cognitive donne au designer les **clés pour anticiper les comportements utilisateurs**. Elle permet de :
 
 - Créer des interfaces plus intuitives
 - Réduire les erreurs
 - Maximiser l’engagement et la satisfaction
+
+```
+
+```
