--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -6,7 +6,7 @@ weight: 5
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+```Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)```
 
 <SrtPlayer
   client:only="react"
@@ -14,11 +14,11 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
   srtUrl="/podcasts/ux-mapping.srt"
 />
 
-### 1. Qu’est-ce que l’UX Mapping ?
+## 1. Qu’est-ce que l’UX Mapping ?
 
 L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode qui permet de représenter visuellement l’expérience d’un utilisateur lorsqu’il interagit avec un produit ou un service.
 
-##### 🎯 Objectif :
+### 🎯 Objectif :
 
 - Synthétiser et structurer les **enseignements de la recherche utilisateur**
 - Identifier les **points de friction**
@@ -26,7 +26,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 2. Pourquoi utiliser l’UX Mapping ?
+## 2. Pourquoi utiliser l’UX Mapping ?
 
 - Aide à **restituer les données** de recherche sous forme exploitable
 - Donne une **vue d’ensemble du parcours utilisateur**
@@ -36,7 +36,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 3. Les grandes méthodes d’UX Mapping
+## 3. Les grandes méthodes d’UX Mapping
 
 | 🛠️ Méthode               | 🎯 Objectif principal                                    |
 | ------------------------ | -------------------------------------------------------- |
@@ -48,9 +48,9 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 4. Focus sur les outils principaux
+## 4. Focus sur les outils principaux
 
-##### Carte d’empathie (Empathy Map)
+### Carte d’empathie (Empathy Map)
 
 - Centrée sur l’utilisateur et ses perceptions
 - 4 quadrants :
@@ -61,7 +61,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 - Peut inclure frustrations, craintes, attentes
 - Réalisée souvent en atelier collaboratif
 
-##### Customer Journey Map (CJM)
+### Customer Journey Map (CJM)
 
 - Frise chronologique de l’expérience utilisateur complète
 - Inclut :
@@ -77,7 +77,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### Les étapes pour créer une CJM
+## Les étapes pour créer une CJM
 
 1. **Choisir un persona** cible
 2. **Définir la portée** (où commence et où finit le parcours)
@@ -95,7 +95,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 --
 
-##### Autres variantes utiles
+### Autres variantes utiles
 
 - **User Journey Map** : parcours spécifique (ex. inscription à une appli)
 - **Experience Map** : macro-vue de l’expérience (souvent multi-canaux)
@@ -103,7 +103,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 5. Bonnes pratiques
+## 5. Bonnes pratiques
 
 - S’appuyer sur **des données réelles** issues de la recherche utilisateur
 - Travailler en **groupe pluridisciplinaire**
@@ -113,7 +113,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### Conclusion
+## Conclusion
 
 L’UX Mapping est un outil puissant pour :
 
