--- a/src/content/docs/fr/ux-personalization.mdx
+++ b/src/content/docs/fr/ux-personalization.mdx
@@ -6,7 +6,7 @@ weight: 7
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+```Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)```
 
 <SrtPlayer
   client:only="react"
@@ -22,7 +22,7 @@ Elle transforme une **expérience générique** en **parcours sur mesure**.
 
 ---
 
-### 2. Pourquoi est-elle importante ?
+## 2. Pourquoi est-elle importante ?
 
 | 🔍 Objectifs UX & Business           | 📈 Bénéfices     |
 | ------------------------------------ | ---------------- |
@@ -36,7 +36,7 @@ Elle transforme une **expérience générique** en **parcours sur mesure**.
 
 ---
 
-### 3. Types de personnalisation UX
+## 3. Types de personnalisation UX
 
 | 🧩 Type                  | 💡 Exemples                                                |
 | ------------------------ | ---------------------------------------------------------- |
@@ -47,7 +47,7 @@ Elle transforme une **expérience générique** en **parcours sur mesure**.
 
 ---
 
-### 4. Données utilisées pour personnaliser
+## 4. Données utilisées pour personnaliser
 
 - Données **déclaratives** : profil, préférences, paramètres
 - Données **comportementales** : navigation, historique d’achats, recherches
@@ -59,26 +59,26 @@ Elle transforme une **expérience générique** en **parcours sur mesure**.
 
 ---
 
-### 5. Mécanismes de personnalisation
+## 5. Mécanismes de personnalisation
 
-##### Utilisateurs connectés
+### Utilisateurs connectés
 
 - Informations récupérées via **création de compte**
 - Exemple : prénom, préférences, mode de livraison
 
-##### Historique de navigation
+### Historique de navigation
 
 - Suivi des visites et produits consultés
 - Exemple : proposer automatiquement les chaussures vues la veille
 
-##### UX Writing personnalisé
+### UX Writing personnalisé
 
 - Utiliser le prénom, adapter le ton
 - Exemple : “Bienvenue Léa ! Voici les nouveautés pour vous”
 
 ---
 
-### 6. Personnaliser après l’achat
+## 6. Personnaliser après l’achat
 
 - Recommandations liées à l’achat précédent
 - Suivi de commande et contenu post-achat adapté
@@ -89,7 +89,7 @@ Elle transforme une **expérience générique** en **parcours sur mesure**.
 
 ---
 
-### 7. Solutions techniques de personnalisation
+## 7. Solutions techniques de personnalisation
 
 | 🛠 Outils / méthodes                        | 💡 Fonction                            |
 | ------------------------------------------ | -------------------------------------- |
@@ -100,7 +100,7 @@ Elle transforme une **expérience générique** en **parcours sur mesure**.
 
 ---
 
-### 8. Consentement & éthique
+## 8. Consentement & éthique
 
 - Collecter uniquement ce qui est **utile**
 - Informer clairement l’utilisateur
@@ -112,7 +112,7 @@ Elle transforme une **expérience générique** en **parcours sur mesure**.
 
 ---
 
-### Conclusion
+## Conclusion
 
 La personnalisation n’est pas un "bonus", c’est un levier essentiel pour une UX fluide, humaine et engageante.
 
