--- a/src/content/docs/fr/ux-user-research.mdx
+++ b/src/content/docs/fr/ux-user-research.mdx
@@ -6,7 +6,10 @@ weight: 3
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-<code> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+```
+  {" "}
+  Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+```
 
 <SrtPlayer
   client:only="react"
@@ -22,7 +25,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 2. Pourquoi faire de la recherche utilisateur ?
+## 2. Pourquoi faire de la recherche utilisateur ?
 
 | ✅ Objectifs                                    | ✨ Résultats attendus                   |
 | ----------------------------------------------- | --------------------------------------- |
@@ -33,20 +36,20 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 3. Les grandes méthodes de recherche
+## 3. Les grandes méthodes de recherche
 
-##### 📚 **Études documentaires**
+### 📚 **Études documentaires**
 
 - Recherches académiques, articles spécialisés, bases de données
 - Moteurs : Google Scholar, Thèses.fr, PubMed
 
-##### 🕵️‍♂️ **Analyse concurrentielle**
+### 🕵️‍♂️ **Analyse concurrentielle**
 
 - Identifier les concurrents
 - Étudier leurs interfaces, offres, et lacunes
 - Identifier les opportunités UX
 
-##### ✅ **Audit ergonomique**
+### ✅ **Audit ergonomique**
 
 - Évaluer les interfaces sans utilisateurs
 - Méthodes : heuristiques de Nielsen, Bastien & Scapin
@@ -54,7 +57,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 4. Études qualitatives (exploratoires)
+## 4. Études qualitatives (exploratoires)
 
 | 🧪 Méthode                   | 👥 Objectif principal                             |
 | ---------------------------- | ------------------------------------------------- |
@@ -66,7 +69,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 5. Études quantitatives (statistiques)
+## 5. Études quantitatives (statistiques)
 
 - **Enquêtes** : via Google Forms, Typeform, etc.
 - **Analytics** : données de navigation, heatmaps, taux de clics
@@ -76,7 +79,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 6. Cibler les bons utilisateurs
+## 6. Cibler les bons utilisateurs
 
 - Créer une **liste d’utilisateurs potentiels** par brainstorming
 - Définir des **personae** réalistes
@@ -88,7 +91,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 7. Outils IA & prompts pour la recherche
+## 7. Outils IA & prompts pour la recherche
 
 - Générer des scripts d’interviews
 - Classer des feedbacks utilisateurs
@@ -100,7 +103,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 8. Synthétiser la recherche
+## 8. Synthétiser la recherche
 
 - **Carte d’empathie**
 - **Customer Journey Map**
@@ -113,7 +116,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### Conclusion
+## Conclusion
 
 La recherche utilisateur n’est pas une étape "optionnelle" :
 
@@ -124,3 +127,7 @@ Elle permet de :
 - Mieux comprendre ses utilisateurs
 - Concevoir des solutions pertinentes
 - Réduire le risque d’échec
+
+```
+
+```
