--- a/src/content/docs/fr/ux-writing.mdx
+++ b/src/content/docs/fr/ux-writing.mdx
@@ -6,7 +6,10 @@ weight: 7
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+```
+  Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by
+  Google)
+```
 
 <SrtPlayer
   client:only="react"
@@ -22,7 +25,7 @@ Il s'agit d’écrire **des micro-textes** (microcopy) qui améliorent la **comp
 
 ---
 
-### 2. À quoi sert l’UX Writing ?
+## 2. À quoi sert l’UX Writing ?
 
 | ✅ Objectifs principaux | 💡 Impact               |
 | ----------------------- | ----------------------- |
@@ -34,7 +37,7 @@ Il s'agit d’écrire **des micro-textes** (microcopy) qui améliorent la **comp
 
 ---
 
-### 3. Retour sur investissement (ROI)
+## 3. Retour sur investissement (ROI)
 
 Un bon UX Writing permet de :
 
@@ -46,7 +49,7 @@ Un bon UX Writing permet de :
 
 ---
 
-### 4. Où intervient l’UX Writing ?
+## 4. Où intervient l’UX Writing ?
 
 L’UX Writer intervient sur **tout le parcours utilisateur**, notamment :
 
@@ -63,7 +66,7 @@ L’UX Writer intervient sur **tout le parcours utilisateur**, notamment :
 
 ---
 
-### 5. Collaboration & rôle de l’UX Writer
+## 5. Collaboration & rôle de l’UX Writer
 
 - Collabore avec : UX designers, Product Managers, développeurs, marketing
 - Travaille sur :
@@ -76,7 +79,7 @@ L’UX Writer intervient sur **tout le parcours utilisateur**, notamment :
 
 ---
 
-### 6. Bonnes pratiques UX Writing
+## 6. Bonnes pratiques UX Writing
 
 | 📝 Pratique                    | ✅ Objectif                          |
 | ------------------------------ | ------------------------------------ |
@@ -90,7 +93,7 @@ L’UX Writer intervient sur **tout le parcours utilisateur**, notamment :
 
 ---
 
-### 7. UX Writing vs Copywriting
+## 7. UX Writing vs Copywriting
 
 | UX Writing                           | Copywriting                        |
 | ------------------------------------ | ---------------------------------- |
@@ -103,7 +106,7 @@ L’UX Writer intervient sur **tout le parcours utilisateur**, notamment :
 
 ---
 
-### 8. UX Writing & données
+## 8. UX Writing & données
 
 L’UX Writer s’appuie sur :
 
@@ -114,7 +117,7 @@ L’UX Writer s’appuie sur :
 
 ---
 
-### Conclusion
+## Conclusion
 
 > L’UX Writing n’est pas "juste du texte", c’est un pilier de l’expérience utilisateur.
 
@@ -123,3 +126,7 @@ Un bon message au bon moment peut transformer :
 - une **erreur frustrante** en moment rassurant
 - un **formulaire bloquant** en expérience fluide
 - un **achat hésitant** en conversion réussie
+
+```
+
+```
