--- a/src/content/docs/fr/continuous-improvement.mdx
+++ b/src/content/docs/fr/continuous-improvement.mdx
@@ -6,14 +6,13 @@ weight: 9
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+`Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)`
 
 <SrtPlayer
   client:only="react"
   audioSrc="/podcasts/continuous-improvement.m4a"
   srtUrl="/podcasts/continuous-improvement.srt"
 />
-
 
 ## 1. Qu’est-ce que l’amélioration continue ?
 
@@ -23,54 +22,52 @@ C’est un **état d’esprit** : ne jamais considérer une solution comme "fina
 
 ---
 
-### 2. Objectifs de l’amélioration continue
+## 2. Objectifs de l’amélioration continue
 
-| 🎯 Objectif | 🔧 Résultat attendu |
-| --- | --- |
-| Identifier les **frictions** UX | Corriger les problèmes réels |
-| Améliorer l’**ergonomie** | Simplifier les parcours |
-| Optimiser la **conversion** | Plus de ventes, d'inscriptions… |
-| Tester de nouvelles **hypothèses** | Innover par petits pas |
-| Renforcer la **fidélisation** | Réduire le churn |
+| 🎯 Objectif                        | 🔧 Résultat attendu             |
+| ---------------------------------- | ------------------------------- |
+| Identifier les **frictions** UX    | Corriger les problèmes réels    |
+| Améliorer l’**ergonomie**          | Simplifier les parcours         |
+| Optimiser la **conversion**        | Plus de ventes, d'inscriptions… |
+| Tester de nouvelles **hypothèses** | Innover par petits pas          |
+| Renforcer la **fidélisation**      | Réduire le churn                |
 
 ---
 
-### 3. La Roue de Deming (PDCA)
+## 3. La Roue de Deming (PDCA)
 
 Le cycle PDCA est une méthode de gestion de l’amélioration continue :
- 
 
-| Étape | Description |
-| --- | --- |
-| **P – Plan** | Identifier un problème, poser une hypothèse, définir un objectif |
-| **D – Do** | Implémenter une solution ou une variation |
-| **C – Check** | Mesurer les résultats (KPI, retours utilisateurs) |
-| **A – Act** | Ajuster, corriger ou déployer selon les résultats |
+| Étape         | Description                                                      |
+| ------------- | ---------------------------------------------------------------- |
+| **P – Plan**  | Identifier un problème, poser une hypothèse, définir un objectif |
+| **D – Do**    | Implémenter une solution ou une variation                        |
+| **C – Check** | Mesurer les résultats (KPI, retours utilisateurs)                |
+| **A – Act**   | Ajuster, corriger ou déployer selon les résultats                |
 
 > [!TIP] Astuce
 > 💡 Ce cycle est **infini** : on itère constamment.
 
 ---
 
-### 4. Outils & méthodes d’analyse
+## 4. Outils & méthodes d’analyse
 
-##### Audit & diagnostic
+### Audit & diagnostic
 
-| 🔧 Méthode | 🎯 Objectif |
-| --- | --- |
-| **Audit ergonomique** | Analyser la qualité UX/UI |
-| **Feedback utilisateur** | Collecter des retours concrets |
-| **Analytics** | Comprendre les usages réels |
-| **Heatmaps** (Clarity, Hotjar…) | Visualiser clics, scrolls, attention |
-| **Enregistrements vidéo** | Rejouer des sessions utilisateur |
-| **A/B testing** | Comparer plusieurs versions d’une même interface |
+| 🔧 Méthode                      | 🎯 Objectif                                      |
+| ------------------------------- | ------------------------------------------------ |
+| **Audit ergonomique**           | Analyser la qualité UX/UI                        |
+| **Feedback utilisateur**        | Collecter des retours concrets                   |
+| **Analytics**                   | Comprendre les usages réels                      |
+| **Heatmaps** (Clarity, Hotjar…) | Visualiser clics, scrolls, attention             |
+| **Enregistrements vidéo**       | Rejouer des sessions utilisateur                 |
+| **A/B testing**                 | Comparer plusieurs versions d’une même interface |
 
 --
 
-##### Bien choisir ses KPI
+### Bien choisir ses KPI
 
 Un KPI (Key Performance Indicator) est un indicateur de performance mesurable.
- 
 
 Exemples en UX :
 
@@ -83,17 +80,17 @@ Exemples en UX :
 
 --
 
-##### L’A/B Testing
+### L’A/B Testing
 
-| 📌 Fonction | 🛠 Outils |
-| --- | --- |
-| Comparer deux versions (A/B) | Google Optimize, Kameleoon, AB Tasty |
-| Mesurer l’impact de petits changements | CTA, titres, images, navigation |
-| Segmenter les tests par audience | Utilisateurs mobiles vs desktop, etc. |
+| 📌 Fonction                            | 🛠 Outils                              |
+| -------------------------------------- | ------------------------------------- |
+| Comparer deux versions (A/B)           | Google Optimize, Kameleoon, AB Tasty  |
+| Mesurer l’impact de petits changements | CTA, titres, images, navigation       |
+| Segmenter les tests par audience       | Utilisateurs mobiles vs desktop, etc. |
 
 ---
 
-### 5. Posture UX dans l’amélioration continue
+## 5. Posture UX dans l’amélioration continue
 
 - Observer avec **neutralité**
 - Identifier sans juger
@@ -107,9 +104,9 @@ Exemples en UX :
 
 ---
 
-### Conclusion
+## Conclusion
 
-L’amélioration continue en UX est une culture du progrès permanent. 
+L’amélioration continue en UX est une culture du progrès permanent.
 
 Elle repose sur :
 
@@ -118,3 +115,7 @@ Elle repose sur :
 - Une **écoute active des utilisateurs**
 
 **Un bon produit ne cesse jamais d’évoluer.**
+
+```
+
+```
