--- a/src/content/docs/fr/ux-personas-and-empathy.mdx
+++ b/src/content/docs/fr/ux-personas-and-empathy.mdx
@@ -6,7 +6,10 @@ weight: 4
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+```
+  Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by
+  Google)
+```
 
 <SrtPlayer
   client:only="react"
@@ -22,7 +25,7 @@ Il permet de **garder l’utilisateur au centre** de la conception tout au long 
 
 ---
 
-### 2. Origines & objectifs
+## 2. Origines & objectifs
 
 - Inventé par **Alan Cooper** en 1999 pour concevoir des interfaces orientées utilisateur.
 - Utilisé en UX **(User Persona)** pour améliorer l’expérience.
@@ -35,7 +38,7 @@ C’est un outil d’**empathie** pour :
 
 ---
 
-### 3. Caractériser un persona UX
+## 3. Caractériser un persona UX
 
 | 📊 Catégorie           | 💡 Exemples                                                    |
 | ---------------------- | -------------------------------------------------------------- |
@@ -48,22 +51,22 @@ C’est un outil d’**empathie** pour :
 
 ---
 
-### 4. Types de personae
+## 4. Types de personae
 
-##### Proto-persona
+### Proto-persona
 
     - Basé sur des hypothèses internes
     - Créé rapidement en début de projet
     - Moins précis mais utile pour démarrer
 
-##### Persona UX (recherché)
+### Persona UX (recherché)
 
     - Repose sur **des données d’entretiens, d’observation, d’analyse**
     - Permet d’avoir une vision plus réaliste et approfondie
 
 ---
 
-### 5. Contenu recommandé d’un persona
+## 5. Contenu recommandé d’un persona
 
 - Prénom, âge, photo fictive
 - Biographie courte
@@ -75,14 +78,14 @@ C’est un outil d’**empathie** pour :
 - Niveau d’expertise digital
 - Contexte d’usage du service
 
-> [!TIP] Tips 
+> [!TIP] Tips
 > Utilise des **templates sur Figma** pour une mise en forme claire
 
 ---
 
-### 6. Empathie & Empathy Map
+## 6. Empathie & Empathy Map
 
-##### Qu’est-ce que la carte d’empathie ?
+### Qu’est-ce que la carte d’empathie ?
 
 > Une Empathy Map est un outil visuel qui aide à synthétiser ce que l’on sait d’un utilisateur.
 
@@ -97,7 +100,7 @@ Elle permet d’aller **au-delà des données brutes** pour comprendre :
 
 ---
 
-### Utilisation en atelier collaboratif
+## Utilisation en atelier collaboratif
 
 - En équipe (design, marketing, produit, support…)
 - Avec des post-its ou sur un board Figma
@@ -108,35 +111,39 @@ Elle permet d’aller **au-delà des données brutes** pour comprendre :
 
 ---
 
-### 7. Carte d'empathie : Structure classique
+## 7. Carte d'empathie : Structure classique
 
-| 🟪 Bloc       | 🎯 Contenu                            |
-| ------------- | ------------------------------------- |
-| **SAYS**      | Ce que l’utilisateur dit en entretien |
-| **THINKS**    | Ce qu’il pense (non dit, déduit)      |
-| **DOES**      | Ce qu’il fait concrètement            |
-| **FEELS**     | Ce qu’il ressent (positif/négatif)    |
+| 🟪 Bloc    | 🎯 Contenu                            |
+| ---------- | ------------------------------------- |
+| **SAYS**   | Ce que l’utilisateur dit en entretien |
+| **THINKS** | Ce qu’il pense (non dit, déduit)      |
+| **DOES**   | Ce qu’il fait concrètement            |
+| **FEELS**  | Ce qu’il ressent (positif/négatif)    |
 | Facultatif | Frustrations, attentes, bénéfices     |
 
 ---
 
-### 8. Synthèse & livrables
+## 8. Synthèse & livrables
 
 - 1 **persona UX** complet par type d’utilisateur
 - 1 **empathy map** par persona
 - Supports visuels présentables pour les stakeholders
 
-##### Ces livrables sont utilisés pour :
+### Ces livrables sont utilisés pour :
 
 - Alimenter le **Customer Journey Map**
 - Définir un **problème à résoudre** (étape suivante du Design Thinking)
 
 ---
 
-### Conclusion
+## Conclusion
 
 Les **personae et cartes d’empathie** sont les bases de toute démarche UX :
 
 > Ils transforment des données utilisateur en outil de conception centré humain.
 
 Sans eux, on conçoit pour _“des utilisateurs imaginaires”_, avec eux, on conçoit pour des **humains réels**.
+
+```
+
+```
