--- a/src/content/docs/fr/ux-personas-and-empathy.mdx
+++ b/src/content/docs/fr/ux-personas-and-empathy.mdx
@@ -6,10 +6,7 @@ weight: 4
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-```
-  Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by
-  Google)
-```
+`Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)`
 
 <SrtPlayer
   client:only="react"
@@ -144,6 +141,3 @@ Les **personae et cartes d’empathie** sont les bases de toute démarche UX :
 
 Sans eux, on conçoit pour _“des utilisateurs imaginaires”_, avec eux, on conçoit pour des **humains réels**.
 
-```
-
-```
