--- a/src/content/docs/fr/ux-writing.mdx
+++ b/src/content/docs/fr/ux-writing.mdx
@@ -6,10 +6,7 @@ weight: 7
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-```
-  Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by
-  Google)
-```
+`Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)`
 
 <SrtPlayer
   client:only="react"
@@ -126,7 +123,3 @@ Un bon message au bon moment peut transformer :
 - une **erreur frustrante** en moment rassurant
 - un **formulaire bloquant** en expérience fluide
 - un **achat hésitant** en conversion réussie
-
-```
-
-```
