--- a/src/content/docs/fr/continuous-improvement.mdx
+++ b/src/content/docs/fr/continuous-improvement.mdx
@@ -6,7 +6,9 @@ weight: 9
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-`Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)`
+```
+Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+```
 
 <SrtPlayer
   client:only="react"
@@ -115,4 +117,3 @@ Elle repose sur :
 - Une **écoute active des utilisateurs**
 
 **Un bon produit ne cesse jamais d’évoluer.**
-
