--- a/src/content/docs/fr/ux-cognitive-psychology.mdx
+++ b/src/content/docs/fr/ux-cognitive-psychology.mdx
@@ -6,7 +6,9 @@ weight: 2
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-`Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)`
+```
+Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+```
 
 <SrtPlayer
   client:only="react"
@@ -83,4 +85,3 @@ La psychologie cognitive donne au designer les **clés pour anticiper les compor
 - Créer des interfaces plus intuitives
 - Réduire les erreurs
 - Maximiser l’engagement et la satisfaction
-
