--- a/src/content/docs/fr/ux-writing.mdx
+++ b/src/content/docs/fr/ux-writing.mdx
@@ -1,6 +1,6 @@
 ---
 title: UX Writing
-description: "L’UX Writing (ou "rédaction UX") est l’art de rédiger des contenus clairs, utiles et cohérents pour guider les utilisateurs tout au long de leur interaction avec un produit digital."
+description: "L’UX Writing (ou rédaction UX) est l’art de rédiger des contenus clairs, utiles et cohérents pour guider les utilisateurs tout au long de leur interaction avec un produit digital."
 weight: 7
 ---
 
