--- a/src/content/docs/fr/information-architecture.mdx
+++ b/src/content/docs/fr/information-architecture.mdx
@@ -6,9 +6,8 @@ weight: 6
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-```
-Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-```
+> [!INFO] Information
+> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 
 <SrtPlayer
   client:only="react"
