--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -6,9 +6,10 @@ weight: 5
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-```
-Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-```
+
+> [!INFO] Information
+> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+
 
 <SrtPlayer
   client:only="react"
