--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -21,7 +21,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode qui permet de représenter visuellement l’expérience d’un utilisateur lorsqu’il interagit avec un produit ou un service.
 
-### 🎯 Objectif :
+### Objectif
 
 - Synthétiser et structurer les **enseignements de la recherche utilisateur**
 - Identifier les **points de friction**
