--- a/src/content/docs/fr/design-thinking/index.mdx
+++ b/src/content/docs/fr/design-thinking/index.mdx
@@ -4,7 +4,7 @@ description: "Le Design Thinking est une méthode de résolution de problèmes c
 weight: 0
 ---
 
-import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
+import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
