--- a/src/content/docs/fr/design-thinking/empathy.mdx
+++ b/src/content/docs/fr/design-thinking/empathy.mdx
@@ -1,6 +1,6 @@
 ---
-title: L’empathie : Comprendre l’utilisateur
-description: "Le Design Thinking est une méthode de résolution de problèmes centrée sur l’utilisateur, utilisée en entreprise pour stimuler la créativité et favoriser l’innovation."
+title: "L’empathie : Comprendre l’utilisateur"
+description: "L’empathie consiste à se mettre à la place des utilisateurs pour comprendre leurs attentes, frustrations et besoins."
 weight: 1
 ---
 
