--- a/src/content/docs/fr/design-thinking/ideation.mdx
+++ b/src/content/docs/fr/design-thinking/ideation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Idéation
-description: "Le Design Thinking est une méthode de résolution de problèmes centrée sur l’utilisateur, utilisée en entreprise pour stimuler la créativité et favoriser l’innovation."
+description: "La phase d’idéation permet de générer un maximum d’idées pour résoudre un problème identifié lors de la phase de définition."
 weight: 3
 ---
 
