--- a/src/content/docs/fr/design-thinking/ideation.mdx
+++ b/src/content/docs/fr/design-thinking/ideation.mdx
@@ -124,7 +124,7 @@ Les idées sont classées selon 4 critères :
 
 ---
 
-## **☝️ Résumé Final**
+## Résumé Final
 
 L’**idéation** permet de générer un maximum d’idées avant de choisir la plus pertinente.
 Elle se divise en **deux étapes** : **Divergence** (créativité) et **Convergence** (sélection).
