--- a/src/content/docs/fr/marketing/index.mdx
+++ b/src/content/docs/fr/marketing/index.mdx
@@ -59,6 +59,8 @@ Il repose sur :
 - Réaliste  
 - Temporellement défini  
 
+![Schéma des objectifs SMART montrant les cinq critères : spécifique, mesurable, atteignable, réalisable et temporel.](/assets/webp/marketing/marketing-smart.webp)
+
 ### Méthode TOMSTER
 
 - Target : définir la cible  
@@ -108,6 +110,8 @@ Les indicateurs de performance servent à :
 - Suivre l’impact  
 - Ajuster les actions  
 - Identifier des opportunités  
+
+![Tableau des objectifs de marketing de marque reliés aux KPI](/assets/webp/marketing/marketing-kpi.webp)
 
 *Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois*  
 
