--- a/src/content/docs/fr/marketing/index.mdx
+++ b/src/content/docs/fr/marketing/index.mdx
@@ -4,16 +4,27 @@ description: "Bases du marketing, stratégies et outils de mise en œuvre."
 weight: 1
 ---
 
+import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
+
+> [!INFO] Information
+> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+
+<SrtPlayer
+  client:only="react"
+  audioSrc="/podcasts/marketing/index.m4a"
+  srtUrl="/podcasts/marketing/index.srt"
+/>
+
 ## Introduction
 
 Le **marketing** est un ensemble d’actions visant à comprendre les besoins des consommateurs et à y répondre efficacement.
 
 Il repose sur :
 
-- Des stratégies d’influence  
-- L’analyse du marché  
-- La segmentation des cibles  
-- Le positionnement et la diffusion de l’offre  
+- Des stratégies d’influence
+- L’analyse du marché
+- La segmentation des cibles
+- Le positionnement et la diffusion de l’offre
 
 ---
 
@@ -21,15 +32,15 @@ Il repose sur :
 
 ### Outbound marketing (traditionnel)
 
-- Message poussé vers le consommateur  
-- Exemples : publicité TV, radio, affiches, phoning  
-- Moins ciblé, plus intrusif, facile à déployer  
+- Message poussé vers le consommateur
+- Exemples : publicité TV, radio, affiches, phoning
+- Moins ciblé, plus intrusif, facile à déployer
 
 ### Inbound marketing (moderne)
 
-- Attirer le client via du contenu pertinent  
-- Exemples : SEO, réseaux sociaux, newsletters  
-- Plus engageant, mais demande temps et effort  
+- Attirer le client via du contenu pertinent
+- Exemples : SEO, réseaux sociaux, newsletters
+- Plus engageant, mais demande temps et effort
 
 ---
 
@@ -37,15 +48,15 @@ Il repose sur :
 
 ### Marketing offline
 
-- Supports physiques : affiches, presse, TV…  
-- Accessible à un public non connecté  
-- Plus tangible et émotionnel  
+- Supports physiques : affiches, presse, TV…
+- Accessible à un public non connecté
+- Plus tangible et émotionnel
 
 ### Marketing digital
 
-- Canaux numériques : site web, email, réseaux sociaux  
-- Portée large, ciblage précis, mesure facilitée  
-- Inclut SEO, SEA, affiliation, influence  
+- Canaux numériques : site web, email, réseaux sociaux
+- Portée large, ciblage précis, mesure facilitée
+- Inclut SEO, SEA, affiliation, influence
 
 ---
 
@@ -53,36 +64,36 @@ Il repose sur :
 
 ### Objectifs SMART
 
-- Spécifique  
-- Mesurable  
-- Atteignable  
-- Réaliste  
-- Temporellement défini  
+- Spécifique
+- Mesurable
+- Atteignable
+- Réaliste
+- Temporellement défini
 
 ![Schéma des objectifs SMART montrant les cinq critères : spécifique, mesurable, atteignable, réalisable et temporel.](/assets/webp/marketing/marketing-smart.webp)
 
 ### Méthode TOMSTER
 
-- Target : définir la cible  
-- Objectives : fixer des objectifs  
-- Message : établir une ligne éditoriale  
-- Strategy : organiser le plan d’action  
-- Technology : choisir les bons outils/réseaux  
-- Evaluating : suivre les KPIs  
-- Resources : allouer budget/équipe  
+- Target : définir la cible
+- Objectives : fixer des objectifs
+- Message : établir une ligne éditoriale
+- Strategy : organiser le plan d’action
+- Technology : choisir les bons outils/réseaux
+- Evaluating : suivre les KPIs
+- Resources : allouer budget/équipe
 
 ### Identifier les cibles
 
-- Via la segmentation :  
-  - Démographique  
-  - Psychologique  
-  - Comportementale  
-  - Géographique  
+- Via la segmentation :
+  - Démographique
+  - Psychologique
+  - Comportementale
+  - Géographique
 
 ### Choisir un positionnement
 
-- Image de la marque dans l’esprit du consommateur  
-- Permet de se différencier  
+- Image de la marque dans l’esprit du consommateur
+- Permet de se différencier
 
 ---
 
@@ -90,73 +101,73 @@ Il repose sur :
 
 ### Les 4P
 
-- Produit : offre, qualité, packaging, SAV  
-- Prix : politique tarifaire, remises, positionnement  
-- Place : canaux de distribution (web, physique)  
-- Promotion : communication, publicité, influence  
+- Produit : offre, qualité, packaging, SAV
+- Prix : politique tarifaire, remises, positionnement
+- Place : canaux de distribution (web, physique)
+- Promotion : communication, publicité, influence
 
 ### Les 3P complémentaires
 
-- Process : parcours client fluide (UX/UI)  
-- People : relation humaine, image du personnel  
-- Preuves (Physical evidence) : avis, témoignages, mentions légales  
+- Process : parcours client fluide (UX/UI)
+- People : relation humaine, image du personnel
+- Preuves (Physical evidence) : avis, témoignages, mentions légales
 
 ---
 
 ## Mesurer avec les KPIs
 
-Les indicateurs de performance servent à :  
+Les indicateurs de performance servent à :
 
-- Suivre l’impact  
-- Ajuster les actions  
-- Identifier des opportunités  
+- Suivre l’impact
+- Ajuster les actions
+- Identifier des opportunités
 
 ![Tableau des objectifs de marketing de marque reliés aux KPI](/assets/webp/marketing/marketing-kpi.webp)
 
-*Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois*  
+_Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois_
 
 ### Exemples de KPIs
 
-| KPI                  | Pourquoi ?                          |
-|----------------------|-------------------------------------|
-| Taux de clics (CTR)  | Mesurer l’efficacité des annonces   |
-| Taux de conversion   | Suivre les ventes ou inscriptions   |
-| Portée / impressions | Évaluer la visibilité               |
-| Taux de rebond       | Vérifier la pertinence des pages    |
-| Leads / Chiffre d’affaires | Objectifs business concrets  |
+| KPI                        | Pourquoi ?                        |
+| -------------------------- | --------------------------------- |
+| Taux de clics (CTR)        | Mesurer l’efficacité des annonces |
+| Taux de conversion         | Suivre les ventes ou inscriptions |
+| Portée / impressions       | Évaluer la visibilité             |
+| Taux de rebond             | Vérifier la pertinence des pages  |
+| Leads / Chiffre d’affaires | Objectifs business concrets       |
 
 ---
 
 ## Planifier une campagne marketing
 
-1. Définir la cible et l’objectif  
-2. Choisir les canaux adaptés  
-3. Créer le contenu (slogan, visuel, CTA)  
-4. Planifier et publier  
-5. Mesurer les résultats (KPIs)  
-6. Ajuster selon les performances  
+1. Définir la cible et l’objectif
+2. Choisir les canaux adaptés
+3. Créer le contenu (slogan, visuel, CTA)
+4. Planifier et publier
+5. Mesurer les résultats (KPIs)
+6. Ajuster selon les performances
 
 ---
 
 ## Exemples de campagnes réussies
 
-- Netflix – Streamberry (Black Mirror) : storytelling immersif  
-- Lego : co-création avec la communauté  
-- Jul x Oasis : campagne virale musicale  
-- Marvel : marketing crossmédia (reportages TV)  
+- Netflix – Streamberry (Black Mirror) : storytelling immersif
+- Lego : co-création avec la communauté
+- Jul x Oasis : campagne virale musicale
+- Marvel : marketing crossmédia (reportages TV)
 
 ---
 
 ## À retenir
 
-- Le marketing repose sur l’écoute client et l’ajustement constant  
-- Une bonne stratégie = objectifs clairs + ciblage précis + pilotage par les données  
+- Le marketing repose sur l’écoute client et l’ajustement constant
+- Une bonne stratégie = objectifs clairs + ciblage précis + pilotage par les données
 
 ---
 
 ## Ressources utiles
 
-- [Hubspot – SMO](https://blog.hubspot.fr/marketing/social-media-optimization)  
-- [Taboola – Native Ads](https://www.taboola.com/fr/publicite-native)  
-- [Propulse – Étude de marché](https://propulsebyca.fr/etude-marche)  
-- [Maarketer – Planification](https://www.maarketer.com/p131-planification-campagnes-marketing.html)  
+- [Hubspot – SMO](https://blog.hubspot.fr/marketing/social-media-optimization)
+- [Taboola – Native Ads](https://www.taboola.com/fr/publicite-native)
+- [Propulse – Étude de marché](https://propulsebyca.fr/etude-marche)
+- [Maarketer – Planification](https://www.maarketer.com/p131-planification-campagnes-marketing.html)
