--- a/src/content/docs/fr/marketing/landing-page.mdx
+++ b/src/content/docs/fr/marketing/landing-page.mdx
@@ -14,3 +14,134 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/marketing/index.m4a"
   srtUrl="/podcasts/marketing/index.srt"
 />
+
+# Qu’est-ce qu’une Landing Page ?
+
+Contrairement aux sites web traditionnels qui offrent plusieurs parcours de navigation, la landing page est une page unique, centrée sur **un objectif de conversion précis**.  
+Elle sert de point d’atterrissage pour les visiteurs provenant de campagnes email, publicités, moteurs de recherche ou réseaux sociaux.
+
+Objectifs possibles :
+
+- Collecte de leads
+- Vente d’un produit
+- Inscription à un événement
+- Souscription à un abonnement
+- Installation d’une application
+
+---
+
+## Types de Landing Pages
+
+### Squeeze Page
+
+- Objectif : générer des leads via un formulaire simple.
+- Peu de champs pour maximiser le taux de complétion.
+- Souvent utilisée pour proposer un contenu premium (livres blancs, études, modèles).
+- KPI principal : taux de complétion du formulaire.
+
+![Exemple de Squeeze Page, page conçue pour collecter l’adresse email d’un utilisateur en échange d’une offre](/assets/webp/marketing/squeeze-page.webp)
+
+### Page de vente
+
+- Vise à vendre un produit ou service spécifique.
+- Proposition de valeur claire dès la hero section.
+- Témoignages, avis, éléments de réassurance.
+- Call-to-action optimisé et contrasté.
+
+![Exemple de Buy Page, page de vente destinée à convaincre l’utilisateur d’acheter un produit ou service](/assets/webp/marketing/buy-page.webp)
+
+### Thank You Page
+
+- Affichée après une action (achat, inscription, réservation).
+- Confirme la bonne prise en compte.
+- Peut introduire du cross-sell ou up-sell.
+- Étape importante pour l’expérience client.
+
+![Exemple de Thanks Page, page de remerciement affichée après une inscription ou un achat](/assets/webp/marketing/thanks-page.webp)
+
+### Splash Page
+
+- Intermédiaire avant l’accès au site.
+- Permet de choisir langue, pays ou type de contenu.
+- Installe l’univers de marque.
+- Doit être rapide et contournable pour éviter la frustration.
+
+![Exemple de Splash Page, page d’accueil intermédiaire avant l’accès au site principal](/assets/webp/marketing/spash-page.webp)
+
+### Page de téléchargement d’application
+
+- Optimisée pour encourager l’installation.
+- Présentation visuelle via mock-ups.
+- Mise en avant des fonctionnalités clés.
+- Boutons de téléchargement clairs et visibles.
+
+
+---
+
+## Landing Page vs Site Web
+
+| Site web                 | Landing page                  |
+| ------------------------ | ----------------------------- |
+| Ensemble de pages        | Page unique                   |
+| Plusieurs objectifs      | Objectif unique               |
+| Navigation multiple      | Navigation limitée ou absente |
+| Multiples call-to-action | CTA unique ou très ciblé      |
+
+---
+
+## Concevoir une Landing Page efficace
+
+### Design
+
+- Cohérence avec l’identité visuelle.
+- Responsive et lisible.
+- Structure claire, hiérarchisée.
+
+### Contenu
+
+- Proposition de valeur claire et immédiate.
+- Titre accrocheur, bénéfices mis en avant.
+
+![Schéma de conception d’un site web illustrant le processus de création et de développement](/assets/webp/marketing/conception.webp)
+
+### Call-to-Action (CTA)
+
+- Verbes d’action à l’impératif.
+- Contraste fort avec le reste de la page.
+- Zone de clic large et accessible.
+- Placé à proximité des arguments de vente.
+
+### Navigation
+
+- Approche "tunnel" (sans navigation) pour des conversions rapides.
+- Navigation simplifiée pour des produits impliquant un choix réfléchi.
+
+### Crédibilité
+
+- Témoignages, avis, logos clients.
+- Garantit la confiance et réduit les freins.
+
+---
+
+## Mesurer l’efficacité
+
+Indicateurs clés (KPIs) :
+
+- Taux de conversion
+- Nombre de conversions
+- Taux de rebond
+- Temps passé sur la page
+- Sources de trafic
+- Résultats de tests A/B
+
+![Illustration des KPI, indicateurs clés de performance utilisés pour mesurer l’efficacité d’un site web ou d’une stratégie marketing](/assets/webp/marketing/kpi.webp)
+
+Outils d’analyse : Google Analytics, Microsoft Clarity, Hotjar.
+
+---
+
+## À retenir
+
+- Une landing page = **objectif clair + contenu ciblé + parcours simplifié**.
+- Son rôle est de convaincre rapidement et guider vers une **action précise**.
+- Son efficacité repose sur une **mesure continue et une optimisation régulière**.
