--- a/src/content/docs/fr/marketing/landing-page.mdx
+++ b/src/content/docs/fr/marketing/landing-page.mdx
@@ -15,7 +15,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   srtUrl="/podcasts/marketing/index.srt"
 />
 
-# Qu’est-ce qu’une Landing Page ?
+## Qu’est-ce qu’une Landing Page ?
 
 Contrairement aux sites web traditionnels qui offrent plusieurs parcours de navigation, la landing page est une page unique, centrée sur **un objectif de conversion précis**.  
 Elle sert de point d’atterrissage pour les visiteurs provenant de campagnes email, publicités, moteurs de recherche ou réseaux sociaux.
