--- a/src/content/docs/fr/marketing/strategy-social-media.mdx
+++ b/src/content/docs/fr/marketing/strategy-social-media.mdx
@@ -65,6 +65,8 @@ Questions clés :
 
 ## La méthode TOMSTER
 
+![Visuel expliquant la méthode TOMSTER]("/assets/webp/marketing/tomster.webp")
+
 Un modèle structurant en 7 étapes :
 
 | Étape          | Description                                                             |
